--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -525,6 +525,9 @@ libpyfoscam==1.0
 # homeassistant.components.mikrotik
 librouteros==3.0.0
 
+# homeassistant.components.water_meter_rs485
+libscrc==1.7.1
+
 # homeassistant.components.soundtouch
 libsoundtouch==0.8
 
@@ -1007,11 +1010,13 @@ pyrituals==0.0.6
 pyruckus==0.12
 
 # homeassistant.components.serial
+# homeassistant.components.water_meter_rs485
 # homeassistant.components.zha
 pyserial-asyncio==0.5
 
 # homeassistant.components.acer_projector
 # homeassistant.components.usb
+# homeassistant.components.water_meter_rs485
 # homeassistant.components.zha
 pyserial==3.5
 
