--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -569,6 +569,7 @@ homeassistant/components/volumio/* @OnFreund
 homeassistant/components/wake_on_lan/* @ntilley905
 homeassistant/components/wallbox/* @hesselonline
 homeassistant/components/waqi/* @andrey-git
+homeassistant/components/water_meter_rs485/* @mikrut
 homeassistant/components/watson_tts/* @rutkai
 homeassistant/components/weather/* @fabaff
 homeassistant/components/webostv/* @bendavid @thecode
