--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -525,7 +525,7 @@ libpyfoscam==1.0
 # homeassistant.components.mikrotik
 librouteros==3.0.0
 
-# homeassistant.components.water_meter_rs485
+# homeassistant.components.pulsar_water_meter
 libscrc==1.7.1
 
 # homeassistant.components.soundtouch
@@ -1009,14 +1009,14 @@ pyrituals==0.0.6
 # homeassistant.components.ruckus_unleashed
 pyruckus==0.12
 
+# homeassistant.components.pulsar_water_meter
 # homeassistant.components.serial
-# homeassistant.components.water_meter_rs485
 # homeassistant.components.zha
 pyserial-asyncio==0.5
 
 # homeassistant.components.acer_projector
+# homeassistant.components.pulsar_water_meter
 # homeassistant.components.usb
-# homeassistant.components.water_meter_rs485
 # homeassistant.components.zha
 pyserial==3.5
 
